Fix radio button color and alignment

--- a/src/client/scss/common/_form.scss
+++ b/src/client/scss/common/_form.scss
@@ -131,7 +131,7 @@ $button-bg: rgba(0, 0, 0, 0.05);
         width: 21px;
         height: 20px;
         left: 0;
-        bottom: 0;
+        top: 1px;
         text-align: center;
         position: absolute;
       }
@@ -159,7 +159,7 @@ $button-bg: rgba(0, 0, 0, 0.05);
     &:checked + label:after{
       content: '\2022';
       position: absolute;
-      top: 3px;
+      top: 4px;
       font-size: 28px;
       line-height: 14px;
     }
@@ -168,7 +168,7 @@ $button-bg: rgba(0, 0, 0, 0.05);
     }
      &:checked + label:after,
      &:checked + label:hover:after{
-      color: $brand-secondary-cta;
+      color: $brand-secondary;
     }
   }
 
